# Projeto_Bancario_Async

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py  security.py
