[project]
name = "projetobancario-async"
version = "0.1.0"
description = ""
authors = [
    {name = "Karen Santos",email = "karensantostech@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "bcrypt (==4.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
